--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -13,7 +13,8 @@
   color-scheme: dark;
 }
 
-body {
+* {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  border-color: rgb(var(--foreground-rgb));
 }
